--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-strap": "0.0.1",
     "reactstrap": "^8.4.1",
     "redux": "^3.7.2"
